# pyignore

./: .gitignore  .gitignore.toml  pyproject.toml
src/gitignore/: __main__.py  main.py  type_adapters.py
src/gitignore/client/: __init__.py  github_client.py
